--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
     <head>
         <title>PokeBrowse</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css"  href="styles/index.css" >
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </head>
     <body>
+        <!-- Top bar to allow for viewing favourites and comparing pokemon -->
+        <nav id="topNavBar" class="navbar navbar-dark navbar-expand-md p-3">
+            <div class="col-2">
+                <img class="w-100" src="images/International_Pokémon_logo.svg.png">
+            </div>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#topNavLinks">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse col-10" id="topNavLinks">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link links">Favourites</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Compare</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        
+        <!-- Pokemon grid -->
         <section class="container">
             <div class="column">
                 <!-- Basic row to display 4 pokemon responsively -->
