Adding Pokemon to Favourites
Functions were added so that when a pokemon is viewed a heart icon could be pressed in order to favourite it.

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
         <div class="container-fluid" id="viewer">
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-6 bg-white d-flex flex-column align-items-center pokemon-view">
-                    <div id="back-btn">
-                        <button class="btn">Back</button>
+                    <div id="buttons">
+                        <button id="back-btn" class="btn">Back</button>
                     </div>
                     <img class="view-img" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png">
                     <h1 id="name"></h1>
+                    <i class="fas fa-heart favourite-icon"></i>
                     <h3> 
                         Height 
                     </h3>
@@ -60,7 +61,7 @@
                         Types 
                     </h3>
                     <table id="types">
-                        
+
                     </table>
                 </div>
             </div>
