--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <!-- Top bar to allow for viewing favourites and comparing pokemon -->
         <nav id="topNavBar" class="navbar navbar-dark navbar-expand-md p-3">
-            <div class="col-2">
+            <div class="col-2" id="logo">
                 <img class="w-100" src="images/International_Pokémon_logo.svg.png">
             </div>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#topNavLinks">
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse col-10" id="topNavLinks">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link links">Favourites</a>
+                        <a class="nav-link links" id="favourites">Favourites</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Compare</a>
+                        <a class="nav-link" id="compare">Compare</a>
                     </li>
                 </ul>
             </div>
